- Repositioned info hover icons - Corrected links for info icons and HLS to point at dp.la - Fixed link wrapping for facet info icons so there's no nested <a>s

--- a/components/SearchComponents/MainContent/Sidebar/Sidebar.scss
+++ b/components/SearchComponents/MainContent/Sidebar/Sidebar.scss
@@ -2,8 +2,13 @@
 
 .informationIcon {
   width: 15px;
-  margin: 0 .4em;
+  vertical-align: bottom;
+  margin: 0 .4em 0 .4em;
   filter: invert(61%) sepia(24%) saturate(666%) hue-rotate(153deg) brightness(90%) contrast(84%);
+}
+
+.toolTip {
+  //width: 15px;
 }
 
 .sidebar {
