--- a/components/shared/Accordion/Accordion.scss
+++ b/components/shared/Accordion/Accordion.scss
@@ -67,6 +67,7 @@
 
 .informationIcon {
   width: 15px;
-  margin: 0 1em;
+  vertical-align: bottom;
+  margin: 0 .4em;
   filter: invert(61%) sepia(24%) saturate(666%) hue-rotate(153deg) brightness(90%) contrast(84%);
 }
